--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -6,7 +6,7 @@ body {
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: Oxygen, verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
