--- a/app/views/tasks/_inline_form.html.erb
+++ b/app/views/tasks/_inline_form.html.erb
@@ -1,7 +1,7 @@
 <div id="inline-task-form">
 <h2>Nueva Tarea</h2>
 
-<%= form_for(@task) do |f| %>
+<%= form_for(@task, remote: true) do |f| %>
 
     <div class="form-title">
       <%= f.text_field :title, placeholder: "Título" %>
@@ -12,7 +12,7 @@
     </div>
 
   <div class="submit">
-    <%= f.submit "Agregar Tarea"%>
+    <%= f.submit "Agregar Tarea", disabled: "disabled" %>
   </div>
 <% end %>
 </div>
